// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price should handle props 1`] = `
<Price
  className="test-class"
  crossedOut={true}
  currencyGrapheme="$"
  graphemeBefore={true}
  value="1234567.89"
>
  <span
    className="root test-class crossed-out"
    data-testid="price"
  >
    $ 1 234 567,89
  </span>
</Price>
`;

exports[`Price should renders correctly 1`] = `
<Price
  currencyGrapheme="₽"
  value="123.45"
>
  <span
    className="root"
    data-testid="price"
  >
    123,45 ₽
  </span>
</Price>
`;
